--- a/main.html
+++ b/main.html
@@ -1,16 +1,54 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<title>CSS Star</title>
+<style>
+.star {
+  position: relative;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin: 50px; /* Adjust as needed */
+  border-right:  100px solid transparent;
+  border-bottom: 70px  solid yellow;
+  border-left:   100px solid transparent;
+  transform: rotate(35deg);
+  font-size: 0; /* Prevent extra space */
+}
 
+.star:before {
+  border-bottom: 80px solid yellow;
+  border-left: 30px solid transparent;
+  border-right: 30px solid transparent;
+  position: absolute;
+  height: 0;
+  width: 0;
+  top: -45px;
+  left: -70px;
+  display: block;
+  content: '';
+  transform: rotate(-35deg);
+}
+
+.star:after {
+  position: absolute;
+  display: block;
+  color: yellow;
+  top: 3px;
+  left: -105px;
+  width: 0px;
+  height: 0px;
+  border-right: 100px solid transparent;
+  border-bottom: 70px solid yellow;
+  border-left: 100px solid transparent;
+  transform: rotate(-70deg);
+  content: '';
+}
+</style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<div class="star"></div>
 
 </body>
-
 </html>
