--- a/main.html
+++ b/main.html
@@ -6,14 +6,20 @@
 .star {
   position: relative;
   display: inline-block;
-  width: 0;
-  height: 0;
-  margin: 50px; /* Adjust as needed */
-  border-right:  100px solid transparent;
-  border-bottom: 70px  solid yellow;
-  border-left:   100px solid transparent;
-  transform: rotate(35deg);
-  font-size: 0; /* Prevent extra space */
+  width: 200px;
+  background-color: yellow;
+  clip-path: polygon(
+	  50% 0%, 
+	  61% 35%,
+	  98% 35%,
+	  68% 57%,
+	  79% 91%,
+	  50% 70%,
+	  21% 91%,
+	  32% 57%,
+	  2% 35%,
+	  39% 35%
+  )	;
 }
 
 .star:before {
